# controller_pkg

./: CMakeLists.txt  README.md  package.xml
clue_reader/: CNNModel.py  ClueGUI.py  ClueGUI.ui  ImageProcessor.py  sift_and_shift.py  test_cnn_fast.pth
driving_controller/: ImitationLearner.ui  ImitationLearnerGUI.py  PID_testing.py  clue_detection.py  drive_cnn.pth  drive_forward.py  model_driving.py  state_machine.py
ella_test/: CNNModel.py  ImitationLeanerGUI.py  ImitationLearner.ui  drive_cnn.pth  drive_cnn1.pth  drive_cnn2.pth  drive_cnn3.pth  drive_cnn4.pth  drive_cnn5.pth  drive_cnn7.pth  drive_cnn_GOD_redundacy.pth
failsafe_driving_controller/: state_machine.py
scripts/: drive_forward.py
